--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "art-gallery",
   "version": "1.0.0",
@@ -14,6 +13,7 @@
     "express": "^4.13.4",
     "express-partials": "^0.3.0",
     "express-session": "^1.13.0",
-    "express-static": "^1.0.3"
+    "express-static": "^1.0.3",
+    "mongoose": "^4.1.0"
   }
 }
