--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.13.0",
     "express-static": "^1.0.3",
-    "mongoose": "^4.1.0"
+    "mongoose": "^4.1.0",
+    "path": "^0.12.7"
   }
 }
