--- a/package.json
+++ b/package.json
@@ -16,5 +16,8 @@
     "express-static": "^1.0.3",
     "mongoose": "^4.1.0",
     "path": "^0.12.7"
+  },
+  "scripts": {
+    "start": "node server/server.js"
   }
 }
