--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "path": "^0.12.7"
   },
   "scripts": {
-    "start": "node server.js"
+    "start": "nodemon server.js"
   },
   "main": "server.js",
   "devDependencies": {},
